# pythons

./:  CONTENT-AWARE ANALYZER-analyze.md  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  2leomotion.py  2leomotion.py alias  ACTION_SUMMARY_2026-04-12.md  ADVANCED_AUTOMATION_TOOLS_README.md  ADVANCED_CONTENT_AWARE_ANALYZER.py  AGENTS.md  AGGRESSIVE_CLEANUP_EXECUTE.py  AGGRESSIVE_DEDUPE.py  AI Alchemy Project Portfolio.html  AI_API_KEYS_INVENTORY.md  AI_Alchemy_Portfolio.html  ANALYSIS_AND_SUGGESTIONS.md  ANALYSIS_clean_vs_clean-organizer.md  ANALYZE_AND_SUGGEST_ORGANIZATION.py  ANALYZE_FOLDER_DEPTHS.py  ANALYZE_MP3_COLLECTION.py  APIFY_Challenge_INTEGRATION.md  APIFY_TOP Actor_RESEARCH.md  APPLY_COMPLETE_ORGANIZATION_FROM_CSV.py  APPLY_COMPLETE_ORGANIZATION_FROM_CSV_CORRECTED.py  APPLY_COMPLETE_ORGANIZATION_PLAN.py  APPLY_COMPLETE_ORGANIZATION_PLAN_CORRECTED.py  APPLY_KNOWLEDGE_LEARNINGS.py  BEFORE_AFTER.csv  BEFORE_AFTER_CONSOLIDATION.md  BEFORE_AFTER_REVIEW.csv  CHANGELOG.md  CLAUDE.md  CLEANUP_ROOT_DUPLICATES.py  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_DIRECTORY_CLEANUP.py  COMPREHENSIVE_DIRECTORY_MAP.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  COMPREHENSIVE_PYTHON_ANALYSIS_REPORT.md  (+1232 more)
.claude/: settings.local.json
.context7/: CONTEXT7_INTEGRATION_SUMMARY.md  codebase_index.json  library_report.json
.history/:  CONTENT-AWARE ANALYZER-analyze_20251227060601.md   CONTENT-AWARE ANALYZER-analyze_20251227060649.md  DEEP ENV & VOLUMES CONTENT-AWARE ANALYZER_20251227060645.py  analyze_structure_20260103185852.py  cleanup_workspace_20260101144526.py
.qwen/: settings.json.disabled
CONTENT/: ANALYZE_AND_ORGANIZE_HTML.py  ANALYZE_DUPLICATES_AND_ROOT.py  ANALYZE_MUSIC.py  ANALYZE_TOPICS.py  IDENTIFY_YOUR_MUSIC.py  ORGANIZE_ROOT_AND_MERGE.py  REORGANIZE_HTML_BY_TOPIC.py  clean_filenames.py  dedup_merge.py
Context-Efficient Expert Agents/: README.md
LLM_Course_Engineers_Handbook_Cover/: 4_bit_LLM_Quantization_with_GPTQ.py  Decoding_Strategies_in_Large_Language_Models.py  Fine_tune_LLMs_with_Axolotl.ipynb  Fine_tune_Llama_2_in_Google_Colab.ipynb  Fine_tune_a_Mistral_7b_model_with_DPO.py  Introduction_to_Weight_Quantization.py  Mergekit.py  Quantize_Llama_2_models_using_GGUF_and_llama_cpp.ipynb  Quantize_Llama_2_models_using_GGUF_and_llama_cpp.py  Quantize_models_with_ExLlamaV2.py  main.py
MEDIA_PROCESSING/: 169-11.py  50.py  8mb (1).py  9mb.py  9mb.py.backup_20260212_124637  9mbs.py  ADVANCED_CONTENT_ANALYSIS.md  ANALYZE_BOOK_STRUCTURE.py  BeautifulSoup.py  GUI.py  (+214 more)
(+4871 files in other folders)
