[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-automation-framework"
version = "1.0.0"
authors = [
    {name = "Steven Chaplinski", email = "sjchaplinski@gmail.com"},
]
description = "A comprehensive collection of Python automation, analysis, and organization tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Text Processing",
    "Topic :: Multimedia",
    "Topic :: Internet",
]
dependencies = [
    # Core dependencies will be specified in requirements/base.txt
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0", 
    "flake8>=3.8",
    "black>=21.0",
    "mypy>=0.800",
    "isort>=5.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
analysis = [
    "astroid>=2.0",
    "pylint>=2.0", 
    "radon>=4.0",
]
media = [
    "Pillow>=8.0",
    "moviepy>=1.0",
    "librosa>=0.9", 
    "pydub>=0.25",
]
ai = [
    "openai>=1.0",
    "anthropic>=0.3",
    "google-generativeai>=0.3",
]

[project.urls]
Homepage = "https://github.com/gptjunkie/pythons-sort"
Repository = "https://github.com/gptjunkie/pythons-sort"
"Bug Reports" = "https://github.com/gptjunkie/pythons-sort/issues"
"PyPI" = "https://pypi.org/project/python-automation-framework/"

[project.scripts]
pythons-sort = "pythons_sort:main"
pythons_sort = "pythons_sort:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pythons_sort = ["*.md", "*.txt", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3